# USP

./: README.md  pnas.2117416119.sapp.pdf:Zone.Identifier  pyproject.toml
data/: __init__.py  element_properties.py
tests/: =  =0.43.0  Li-In.xyz  non_superionic.xyz  opt.xyz  test_core.py
usp/: __init__.py  api.py  classifier.py  dft.py  input.py  main.py  optimizer.py  workflow.py
usp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
